Changes made by Iva Koevska (iva.koevska@telerik.local).

--- a/tabstrip-graphite-exp/views/home.html
+++ b/tabstrip-graphite-exp/views/home.html
@@ -1,3 +1,6 @@
 <div data-role="view" data-title="Home" data-layout="main" data-model="APP.models.home">
   <h1 data-bind="html: title"></h1>
+    <p>Once upon a time in the west.<br/>
+        <img src="images/314626.jpg" width="300 px">
+    </p>
 </div>
